--- a/t1.html
+++ b/t1.html
@@ -51,7 +51,7 @@
    <td style="text-align:left;"> &lt;0.001 </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> age </td>
+   <td style="text-align:left;"> AGE </td>
    <td style="text-align:left;"> NA </td>
    <td style="text-align:left;"> 69 (59:78) </td>
    <td style="text-align:left;"> 69 (59:78) </td>
@@ -89,38 +89,6 @@
    <td style="text-align:left;"> 79199 (33.8%) </td>
    <td style="text-align:left;"> 14149 (33.3%) </td>
    <td style="text-align:left;"> 0.049 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> hei_group </td>
-   <td style="text-align:left;"> 1.65 - 1.75 </td>
-   <td style="text-align:left;"> 53160 (27.7%) </td>
-   <td style="text-align:left;"> 64944 (27.7%) </td>
-   <td style="text-align:left;"> 11784 (27.8%) </td>
-   <td style="text-align:left;"> 0.945 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> hei_group </td>
-   <td style="text-align:left;"> 1.75 - 1.85 </td>
-   <td style="text-align:left;"> 27650 (14.4%) </td>
-   <td style="text-align:left;"> 33773 (14.4%) </td>
-   <td style="text-align:left;"> 6123 (14.4%) </td>
-   <td style="text-align:left;"> 0.945 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> hei_group </td>
-   <td style="text-align:left;"> &lt; 1.65 </td>
-   <td style="text-align:left;"> 70146 (36.6%) </td>
-   <td style="text-align:left;"> 85713 (36.6%) </td>
-   <td style="text-align:left;"> 15567 (36.7%) </td>
-   <td style="text-align:left;"> 0.945 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> hei_group </td>
-   <td style="text-align:left;"> &gt; 1.85 </td>
-   <td style="text-align:left;"> 4419 (2.3%) </td>
-   <td style="text-align:left;"> 5378 (2.3%) </td>
-   <td style="text-align:left;"> 959 (2.3%) </td>
-   <td style="text-align:left;"> 0.945 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> diag </td>
@@ -200,6 +168,86 @@
    <td style="text-align:left;"> 22518 (11.7%) </td>
    <td style="text-align:left;"> 26764 (11.4%) </td>
    <td style="text-align:left;"> 4246 (10.0%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> com </td>
+   <td style="text-align:left;"> 0 </td>
+   <td style="text-align:left;"> 7656 (4.0%) </td>
+   <td style="text-align:left;"> 9625 (4.1%) </td>
+   <td style="text-align:left;"> 1969 (4.6%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> com </td>
+   <td style="text-align:left;"> 1 </td>
+   <td style="text-align:left;"> 3556 (1.9%) </td>
+   <td style="text-align:left;"> 4501 (1.9%) </td>
+   <td style="text-align:left;"> 945 (2.2%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> com </td>
+   <td style="text-align:left;"> 2 </td>
+   <td style="text-align:left;"> 2081 (1.1%) </td>
+   <td style="text-align:left;"> 2618 (1.1%) </td>
+   <td style="text-align:left;"> 537 (1.3%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> com </td>
+   <td style="text-align:left;"> 3 </td>
+   <td style="text-align:left;"> 1398 (0.7%) </td>
+   <td style="text-align:left;"> 1794 (0.8%) </td>
+   <td style="text-align:left;"> 396 (0.9%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> com </td>
+   <td style="text-align:left;"> Not recorded </td>
+   <td style="text-align:left;"> 177016 (92.3%) </td>
+   <td style="text-align:left;"> 215631 (92.1%) </td>
+   <td style="text-align:left;"> 38615 (90.9%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> tnm </td>
+   <td style="text-align:left;"> I </td>
+   <td style="text-align:left;"> 35368 (18.4%) </td>
+   <td style="text-align:left;"> 42977 (18.4%) </td>
+   <td style="text-align:left;"> 7609 (17.9%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> tnm </td>
+   <td style="text-align:left;"> II </td>
+   <td style="text-align:left;"> 32625 (17.0%) </td>
+   <td style="text-align:left;"> 39312 (16.8%) </td>
+   <td style="text-align:left;"> 6687 (15.7%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> tnm </td>
+   <td style="text-align:left;"> III </td>
+   <td style="text-align:left;"> 38963 (20.3%) </td>
+   <td style="text-align:left;"> 47810 (20.4%) </td>
+   <td style="text-align:left;"> 8847 (20.8%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> tnm </td>
+   <td style="text-align:left;"> IV </td>
+   <td style="text-align:left;"> 49905 (26.0%) </td>
+   <td style="text-align:left;"> 62192 (26.6%) </td>
+   <td style="text-align:left;"> 12287 (28.9%) </td>
+   <td style="text-align:left;"> &lt;0.001 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> tnm </td>
+   <td style="text-align:left;"> Not recorded </td>
+   <td style="text-align:left;"> 34846 (18.2%) </td>
+   <td style="text-align:left;"> 41878 (17.9%) </td>
+   <td style="text-align:left;"> 7032 (16.6%) </td>
    <td style="text-align:left;"> &lt;0.001 </td>
   </tr>
 </tbody>
